# smfc

./: CMakeLists.txt
src/: CMakeLists.txt  codegen.h  generator.h
